fix dashboard scrollbar

--- a/resources/sass/admin/links.scss
+++ b/resources/sass/admin/links.scss
@@ -3,7 +3,7 @@
     height: 100%;
     padding-right: 0;
     padding-left: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     hr {
         margin: 0;
     }
